--- a/custom-java-client-openapi-generator/src/main/resources/custom-java-client/libraries/rest-assured/api_doc.mustache
+++ b/custom-java-client-openapi-generator/src/main/resources/custom-java-client/libraries/rest-assured/api_doc.mustache
@@ -1,6 +1,9 @@
 # {{classname}}{{#description}}
 {{description}}{{/description}}
 
+XXXXX
+
+
 All URIs are relative to *{{basePath}}*
 
 Method | HTTP request | Description
