--- a/custom-java-client-openapi-generator/src/main/resources/custom-java-client/libraries/rest-assured/ApiClient.mustache
+++ b/custom-java-client-openapi-generator/src/main/resources/custom-java-client/libraries/rest-assured/ApiClient.mustache
@@ -36,13 +36,13 @@ public class ApiClient {
      {{#apiInfo}}
      {{#apis}}
     public {{classname}} {{classVarName}}() {
-        return {{classname}}.{{classVarName}}(config.baseReqSpec.get());
+        return {{classname}}.{{classVarName}}(config.reqSpecSupplier);
     }
      {{/apis}}
      {{/apiInfo}}
 
     public static class Config {
-        private Supplier<RequestSpecBuilder> baseReqSpec;
+        private Supplier<RequestSpecBuilder> reqSpecSupplier;
 
         /**
          * Use common specification for all operations
@@ -50,7 +50,7 @@ public class ApiClient {
          * @return configuration
          */
         public Config reqSpecSupplier(Supplier<RequestSpecBuilder> supplier) {
-            this.baseReqSpec = supplier;
+            this.reqSpecSupplier = supplier;
             return this;
         }
 
